@@ -6409,6 +6409,10 @@
       <key>Tip_SkillGroup_Skills</key>
       <text>Skills in this Group:</text>
     </string>
+    <string>
+      <key>Tip_Skill_Zero_Attribute</key>
+      <text>Attribute ({0}) is zero.</text>
+    </string>
     <!-- End Region-->
     <!-- Region Spirits/Sprites -->
     <string>
